[package]
name = "rust-data-engineering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
polars = { version = "0.30.0" , features = ["polars-io", "lazy"] }
polars-io = { version = "0.30.0", features=["parquet"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
num = "0.4.1"
smartcore = "0.3.2"
sysinfo = "0.29.5"
